# xkcds

./: README.md  meson.build
libgtkimageview/: meson.build
po/: meson.build
src/: main.c  meson.build  xkcd-api.c  xkcd-api.h  xkcd-imageview.c  xkcd-imageview.h  xkcd.c  xkcd.h  xkcds-application.c  xkcds-application.h  xkcds-image.c  xkcds-image.h  xkcds-window.c  xkcds-window.h
src/resources/: #xkcds-image.ui#  xkcds-gresources.xml  xkcds-image.ui  xkcds-imageview.ui  xkcds-window.ui  xkcds-window.ui~
